# jx

./: .bacon-locations  CHANGELOG.md  Cargo.toml  README.md  a.json  dist-workspace.toml  release-plz.toml
.githooks/: pre-commit  pre-push
.github/workflows/: release-plz.yml  release.yml
examples/: reference.json
src/: args.rs  core.rs  display.rs  events.rs  formatter.rs  help.rs  json.rs  main.rs  prompt.rs  renderer.rs  run.rs  screen.rs  search.rs  style.rs  ui.rs
src/json/: formatter.rs  mod.rs  pointer.rs  token.rs
src/tui/: mod.rs  screen.rs
wix/: main.wxs
