[package]
name = "jx"
description = "An interactive JSON explorer for the command line"
authors = ["Nicolas Epstein <nilueps@gmail.com>"]
version = "0.3.1"
homepage = "https://github.com/sqwxl/jx"
documentation = "https://github.com/sqwxl/jx"
repository = "https://github.com/sqwxl/jx"
edition = "2021"
license = "Unlicense"
keywords = ["json", "cli", "explorer", "interactive"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
arboard = "3.4.1"
box_drawing = "0.1.2"
clap = { version = "4.5.27", features = ["derive"] }
crossterm = "0.28.1"
serde_json = { version = "1.0.137", features = ["preserve_order"] }
