[package]
name = "jx"
description = "An interactive JSON explorer for the command line"
authors = ["Nicolas Epstein <nilueps@gmail.com>"]
version = "0.5.7"
homepage = "https://github.com/sqwxl/jx"
documentation = "https://github.com/sqwxl/jx"
repository = "https://github.com/sqwxl/jx"
edition = "2021"
license = "Unlicense"
keywords = ["json", "cli", "explorer", "interactive"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
