[package]
name = "jx"
description = "An interactive JSON explorer for the command line"
authors = ["Nicolas Epstein <nilueps@gmail.com>"]
version = "0.5.12"
homepage = "https://github.com/sqwxl/jx"
documentation = "https://github.com/sqwxl/jx"
repository = "https://github.com/sqwxl/jx"
edition = "2021"
license = "Unlicense"
keywords = ["json", "cli", "explorer", "interactive"]
categories = ["command-line-utilities", "text-processing"]

[package.metadata.wix]
upgrade-guid = "9CB9606E-6227-43C8-AA9B-B9C4A1DF9CEE"
path-guid = "BC08C4B7-0A48-4E0D-B18B-5107ABB9F1C0"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
